@@ -5,7 +5,7 @@ import java.util.ArrayList;
 public class EjemploArraysList {
     public static void main(String[] args) {
         //1.- Creamos el arraylist
-        ArrayList<Integer> numero = new ArrayList<Integer>();
+        ArrayList<Integer> numero = new ArrayList<>();
         //2.- Usamos la colección mediante sus métodos
         //añadimos un elemento en la lista
         numero.add(5); //add es para añadir
@@ -16,14 +16,14 @@ public class EjemploArraysList {
         //borramos el segundo elemento
         numero.remove(1);
         System.out.println(numero);
-        //borramos un elemento por indice
-        numero.remove(numero.size()-1);//remove asi eliminamos.
+        //borramos un elemento por índice
+        numero.removeLast();//remove asi eliminamos.
         System.out.println(numero);
         System.out.println(numero.contains(10));
         //mostrar los valores de arrays
-        for (int i = 0; i < numero.size(); i++) {
-            int num=numero.get(i);//da un numero
-            System.out.println("valor: "+num);
+        //da un numero
+        for (int num : numero) {
+            System.out.println("valor: " + num);
         }
         System.out.println("El valor 10 estan el posición: "+numero.indexOf(10));//muestra la posicion del valor
         numero.set(0,55);//modifica la posion 0 con el valor que pasemos por parametro.
